# Frog-Engine

./: .gitignore  Abomination.sln  CMakeLists.txt  README.md  build.zig
Abomination/: Abomination.cpp  Abomination.vcxproj  Abomination.vcxproj.filters  stdafx.cpp
Docs/: CODE_CONV.md  CONV.md  PROBLEMS.md  ROADMAP.md  TECH_POLYMORPH.md  Проектирование.md
code/: App.cpp  App.h  Engine.cpp  Engine.h  Engine.pro  Entity.cpp  Entity.h  FG.h  Graphic.cpp  Graphic.h  Scene.cpp  Scene.h
code/AppComponents/: AudioComponent.h  GraphicsComponent.cpp  GraphicsComponent.h  WindowComponent.cpp  WindowComponent.h
code/AppTemplates/: QtApp.cpp  QtApp.h  QtAudioComponent.h  QtGraphicsComponent.cpp  QtGraphicsComponent.h  QtNativeImage.cpp  QtNativeImage.h  QtNativeSound.cpp  QtNativeSound.h  QtWindowComponent.cpp  QtWindowComponent.h
code/Example/: GameScene.h  Player.h  Spritemap.h  Tilemap.cpp  Tilemap.h
code/Graphics/: Image.h
code/Utils/: Color.h  INativeImage.h  INativeSound.h
src/: CMakeLists.txt  Engine.h  FG.cpp  Scene.h  main.cpp
src/AppComponents/: AudioComponent.cpp  CMakeLists.txt  GraphicsComponent.h
src/AppTemplates/: CMakeLists.txt  QtAudioComponent.cpp  QtGraphicsComponent.h
src/Example/: CMakeLists.txt  GameScene.cpp  LogoScene.cpp  LogoScene.h  MenuScene.cpp  MenuScene.h  PlatformerEngine.cpp  PlatformerEngine.h  Player.cpp  Spritemap.cpp
src/Graphics/: CMakeLists.txt
src/Utils/: BoundingBox.h  CMakeLists.txt  INativeImage.h
